[tool.poetry]
name = "mood-tracker"
version = "1.0.0"
description = "Tracks various lifestryle routines to better evaluate your mood."
authors = ["Vinicius Peixoto <vinicius.opeixoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.7"
dynaconf = "3.2.3"
falcon = "3.1.1"
greenlet = "2.0.2"
gunicorn = "21.2.0"
packaging = "23.2"
pathspec = "0.11.2"
platformdirs = "3.10.0"
psycopg2 = "2.9.8"
sqlalchemy = "2.0.21"
typing-extensions = "4.8.0"
pyjwt = "^2.8.0"


[tool.poetry.group.development.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mariadb = "^1.1.9"

[tool.pytest.ini_options]
pythonpath = "api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
